--- a/main.css
+++ b/main.css
@@ -1,31 +1,39 @@
-@import url("https://fonts.googleapis.com/css2?family=Domine&family=Inter&display=swap");
-
-:root {
-  --c1: rgb(68, 255, 209);
-  --c2: rgb(97, 83, 204);
-  --c3: rgb(166, 0, 103);
-  --c4: rgb(150, 29, 78);
-  --c5: rgb(54, 10, 20);
-}
+@import url('https://fonts.googleapis.com/css2?family=Domine&family=Inter&display=swap');
 
 /* General Style */
-
 body {
   height: 100vh;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   box-sizing: border-box;
-  background-image: url("https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80");
+  background-image: url('https://images.unsplash.com/photo-1494783367193-149034c05e8f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
   margin: 0;
   display: flex;
   flex-direction: column;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 10px 10px #c8c7cc;
+  border: solid 3px transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 10px 10px transparent;
+  border: solid 3px transparent;
+}
+
+/* Main Area */
 main {
+  /* position: relative; */
   color: white;
   user-select: none;
   height: 100%;
@@ -34,59 +42,44 @@ main {
 main > * {
   flex: 1 1 auto;
   flex-basis: min-content;
-  align-self: stretch;
+  /* align-self: stretch; */
 }
 
-footer {
-  position: fixed;
-  bottom: 0;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  overflow: hidden;
-}
-
-footer > * {
-  padding: 1.5em;
-}
-
-aside {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  z-index: 3;
-  right: -450px;
-  height: 100vh;
-  min-width: 333px;
-  width: 408px;
-  padding: 0 21px;
-  visibility: hidden;
-  background-color: #f2f2f7;
-  color: #222;
-  font-size: 15px;
-  font-weight: 400;
-  text-shadow: none;
-  text-align: left;
-  touch-action: pan-y;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  /* transform: translateX(-100%); */
+#time > * {
+  margin: 0;
 }
 
 #clock {
-  font-size: 6em;
-  margin: 0;
+  font-size: 6rem;
   font-weight: 600;
 }
 
 #date {
-  margin: 0;
+  font-size: 2rem;
   font-weight: 600;
 }
 
 #info > * {
-  margin-top: 0;
+  margin: 0;
+}
+
+#greet {
+  font-size: 1.5rem;
+  font-weight: normal;
+}
+
+#current {
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: normal;
+}
+
+#weatherIcon {
+  filter: invert(1);
+  /* margin: -10px; */
+  padding: 0;
+  height: 100px;
+  width: 100px;
 }
 
 .box {
@@ -117,8 +110,43 @@ aside {
   margin-top: 10px;
 }
 
+#quote {
+  font-family: 'Domne', serif;
+  width: 33.33%;
+}
+
+#quote > * {
+  margin: 0;
+}
+
+#quote #content {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+#quote #author {
+  font-size: 1rem;
+  font-style: italic;
+}
+
+/* Footer Area */
+footer {
+  position: fixed;
+  z-index: 3;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  overflow: hidden;
+}
+
+footer > * {
+  padding: 1.5rem;
+}
+
 .credit {
-  padding: 1em;
+  padding: 1rem;
 }
 
 .author {
@@ -153,11 +181,45 @@ aside {
 }
 
 #showSettings button:hover img {
-  transform: rotate(45deg);
+  transform: rotate(15deg);
 }
 
-#showSettings.shown img {
+#showSettings.shown button img {
   transform: rotate(60deg);
+}
+
+#showSettings.shown button {
+  backdrop-filter: blur(10px);
+  background: rgba(160, 160, 160, 0.4);
+}
+
+/* Settings Sidebar */
+#settings {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  z-index: 2;
+  right: -450px;
+  height: 100vh;
+  min-width: 333px;
+  width: 408px;
+  padding: 0 21px;
+  visibility: visible;
+  background-color: rgba(255, 255, 255, 0.1);
+  /* backdrop-filter: blur(100px); */
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+  font-weight: 400;
+  text-shadow: none;
+  text-align: left;
+  touch-action: pan-y;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  transition: transform 0.4s;
+}
+
+#settings.shown {
+  transform: translateX(-100%);
 }
 
 /* Utilities */
